[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/theme/gdscript_app_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/components/popups/ErrorOverlayPopup.gd" type="Script" id=2]
[ext_resource path="res://ui/components/Revealer.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/theme/panel_normal.tres" type="StyleBox" id=6]
[ext_resource path="res://ui/theme/fonts/font_text_bold.tres" type="DynamicFont" id=7]
[ext_resource path="res://ui/theme/button_outline_large_normal.tres" type="StyleBox" id=8]
[ext_resource path="res://ui/theme/button_outline_large_hover.tres" type="StyleBox" id=9]
[ext_resource path="res://ui/theme/button_outline_large_pressed.tres" type="StyleBox" id=10]

[node name="ErrorOverlayPopup" type="MarginContainer"]
margin_right = 553.0
margin_bottom = 362.0
rect_min_size = Vector2( 580, 360 )
mouse_filter = 2
theme = ExtResource( 1 )
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 580.0
margin_bottom = 362.0
mouse_filter = 2
custom_styles/panel = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 580.0
margin_bottom = 362.0

[node name="Column" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 560.0
margin_bottom = 342.0
custom_constants/separation = 8

[node name="ErrorLabel" type="Label" parent="MarginContainer/Column"]
margin_right = 540.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0.360784, 0.678431, 0.988235, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Original error message"
autowrap = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Column"]
margin_top = 36.0
margin_right = 540.0
margin_bottom = 36.0
custom_constants/separation = 0

[node name="Content" type="VBoxContainer" parent="MarginContainer/Column"]
margin_top = 44.0
margin_right = 540.0
margin_bottom = 322.0
size_flags_vertical = 3

[node name="ErrorExplanation" parent="MarginContainer/Column/Content" instance=ExtResource( 5 )]
margin_right = 540.0
margin_bottom = 99.0
rect_min_size = Vector2( 200, 0 )
title = "Why this happens"
is_expanded = true

[node name="Value" type="RichTextLabel" parent="MarginContainer/Column/Content/ErrorExplanation"]
margin_left = 8.0
margin_top = 58.0
margin_right = 532.0
margin_bottom = 87.0
bbcode_enabled = true
bbcode_text = "Our error explanation."
text = "Our error explanation."
fit_content_height = true

[node name="ErrorSuggestion" parent="MarginContainer/Column/Content" instance=ExtResource( 5 )]
margin_top = 115.0
margin_right = 540.0
margin_bottom = 161.0
title = "How to fix this"

[node name="Value" type="RichTextLabel" parent="MarginContainer/Column/Content/ErrorSuggestion"]
visible = false
margin_left = 8.0
margin_top = 58.0
margin_right = 556.0
margin_bottom = 87.0
bbcode_enabled = true
bbcode_text = "Our suggestion on how to fix it."
text = "Our suggestion on how to fix it."
fit_content_height = true

[node name="NoContent" type="RichTextLabel" parent="MarginContainer/Column"]
visible = false
margin_top = 44.0
margin_right = 537.0
margin_bottom = 346.0
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "Sorry, we don't have this particular error message covered yet!

Please, use the [b]Report[/b] button in the top-right corner to tell us more about how you've got it, and we will try to improve our knowledge base for the next version of the application.

[center]Thank you![/center]"
text = "Sorry, we don't have this particular error message covered yet!

Please, use the Report button in the top-right corner to tell us more about how you've got it, and we will try to improve our knowledge base for the next version of the application.

Thank you!"

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/Column"]
visible = false
margin_top = 299.0
margin_right = 564.0
margin_bottom = 346.0
alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/Column/Buttons"]
margin_left = 222.0
margin_right = 342.0
margin_bottom = 47.0
rect_min_size = Vector2( 120, 0 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 8 )
text = "Hide"
